--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/react": "^12.0.0",
+    "axios": "^0.21.4",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "next": "11.0.1",
+    "next": "^11.1.2",
     "next-redux-wrapper": "^7.0.2",
     "node-sass": "^6.0.1",
     "react": "17.0.2",
